fix: sidebar alignment

--- a/src/global.scss
+++ b/src/global.scss
@@ -61,7 +61,7 @@
   display: flex;
   flex-direction: column;
   top: 70px;
-  right: calc((100% - 267px) / 2);
+  left: calc(calc(100vw - 600px)/2 + 290px);
   gap: 20px;
   
 }
